[gd_scene load_steps=7 format=3 uid="uid://c5l68lp215vri"]

[ext_resource type="Texture2D" uid="uid://ce0fekb5twhra" path="res://assets/inavder.png" id="1_7ogvd"]
[ext_resource type="Script" path="res://assets/game.gd" id="1_jdh0b"]
[ext_resource type="Script" path="res://assets/lives_container.gd" id="2_kp0e3"]
[ext_resource type="Script" path="res://assets/enemy_container.gd" id="3_apdtc"]
[ext_resource type="PackedScene" uid="uid://dcklte6xvjnl" path="res://assets/player.tscn" id="3_yyxa8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pwbho"]
bg_color = Color(0.2484, 0.2484, 0.2484, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[node name="Game" type="Node2D"]
script = ExtResource("1_jdh0b")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -577.0
offset_top = -325.0
offset_right = 578.0
offset_bottom = 326.0
size_flags_horizontal = 4
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="Control"]
z_index = -5
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="LivesContainer" type="BoxContainer" parent="Control"]
z_index = -2
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0571429
anchor_top = 0.0015361
anchor_right = 0.227706
anchor_bottom = 0.121352
alignment = 1
vertical = true
script = ExtResource("2_kp0e3")
metadata/_edit_use_anchors_ = true

[node name="Sprite2D1" type="Sprite2D" parent="Control/LivesContainer"]
position = Vector2(17, 47)
scale = Vector2(0.642857, 0.645455)
texture = ExtResource("1_7ogvd")
region_enabled = true
region_rect = Rect2(20.5, 199.25, 91.5, 55)

[node name="Sprite2D2" type="Sprite2D" parent="Control/LivesContainer"]
position = Vector2(84, 47)
scale = Vector2(0.631868, 0.609091)
texture = ExtResource("1_7ogvd")
region_enabled = true
region_rect = Rect2(20.5, 199.25, 91.5, 55)

[node name="Sprite2D3" type="Sprite2D" parent="Control/LivesContainer"]
position = Vector2(155, 47)
scale = Vector2(0.642857, 0.609091)
texture = ExtResource("1_7ogvd")
region_enabled = true
region_rect = Rect2(20.5, 199.25, 91.5, 55)

[node name="GameOverScreen" type="PanelContainer" parent="Control"]
visible = false
z_index = 5
layout_mode = 1
anchors_preset = -1
anchor_left = 0.180087
anchor_top = 0.149002
anchor_right = 0.817316
anchor_bottom = 0.826421
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_pwbho")

[node name="VBoxContainer" type="VBoxContainer" parent="Control/GameOverScreen"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="Label" type="Label" parent="Control/GameOverScreen/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 61
text = "Game Over..."

[node name="Button" type="Button" parent="Control/GameOverScreen/VBoxContainer"]
process_mode = 3
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 51
text = "Restart"

[node name="Player" parent="." instance=ExtResource("3_yyxa8")]
position = Vector2(0, 250)

[node name="EnemyContainer" type="Node2D" parent="."]
script = ExtResource("3_apdtc")

[connection signal="pressed" from="Control/GameOverScreen/VBoxContainer/Button" to="." method="_on_button_pressed"]
